--- a/TODO
+++ b/TODO
@@ -1,23 +1,3 @@
-Collect nodes
-
-v
-
-generate values from nodes
-  - let functions decide whether they want to generate a value based on node passed to it
-    - include some helper functions to help run against specific kinds of nodes
-  - attach a value to target
-  - generate an array of values on Tester for easy testing?
-
-v
-
-grade the values
-  - traverse the bullseye
-    - check for values
-      - run grading callback against values
-        - callback reports to a gradebook object!
-          - targets run against, values, expected, passed
-  - gradebook checks results of callbacks and returns final result
-
 Properties:
 * CSS hypothetical
 * Position relative to:
@@ -30,3 +10,15 @@ Compare network response:
 
 Misc:
 * Page size
+
+Debugging:
+* debug mode
+* pause mode
+
+Code cleanliness:
+* make private TA methods actually private
+* merge TA.value and TA.values by querying the GradeBook for values instead
+
+Fixes:
+* absolute position gives position relative to viewport. is that desired behavior?
+* expand toEqual to match arrays and objects as well
