--- a/src/js/README
+++ b/src/js/README
@@ -1,1 +1,3 @@
 The files in this directory get concatted into udgrader-xxx.js for dev, udgrader-prod.js for prod. See build script for order.
+
+Files as class definitions are capitalized.
