--- a/TODO
+++ b/TODO
@@ -44,6 +44,7 @@ Code cleanliness:
 Fixes:
 * absolute position gives position relative to viewport. is that desired behavior?
 * expand toEqual to match arrays and objects as well
+* autoload meta[name="udacity-grader"]
 
 Performance:
 * cssProperty creates a FSL
